# volumetric-clouds

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
data/mesh/: plane.mtl
src/: CMakeLists.txt  main.cpp
src/shader/: atmosphere.glsl  clouds_fs.glsl  detail_noise_cs.glsl  mesh_fs.glsl  mesh_vs.glsl  noise.glsl  shape_noise_cs.glsl  tonemap_fs.glsl  triangle_vs.glsl
